Factor out renderer specific information to the top level

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,25 @@ INCLUDE_DIRECTORIES ( ./utils )
 INCLUDE_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/include )
 INCLUDE_DIRECTORIES ( $ENV{OPENEXR_ROOT}/include )
 INCLUDE_DIRECTORIES ( $ENV{ILMBASE_ROOT}/include )
-INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
 
 LINK_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/lib )
 LINK_DIRECTORIES ( $ENV{OPENEXR_ROOT}/lib )
 LINK_DIRECTORIES ( $ENV{ILMBASE_ROOT}/lib )
-LINK_DIRECTORIES ( $ENV{DELIGHT}/lib . )
 
-ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -fPIC )
+# Renderer specific options
+IF ( RENDERER MATCHES "PRMan" )
+  INCLUDE_DIRECTORIES ( $ENV{RMANTREE}/include )
+  LINK_DIRECTORIES ( $ENV{RMANTREE}/lib . )
+  ADD_DEFINITIONS ( -DPRMAN_RIBCLIENT -fPIC )
+  SET ( RIBCLIENT_LIBRARIES prman )
+ELSEIF ( RENDERER MATCHES "3Delight" )
+  INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
+  LINK_DIRECTORIES ( $ENV{DELIGHT}/lib . )
+  ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -fPIC )
+  SET ( RIBCLIENT_LIBRARIES 3delight )
+ELSE ( RENDERER MATCHES "3Delight" )
+ENDIF ( RENDERER MATCHES "PRMan")
+
 
 ADD_LIBRARY ( utils STATIC
   utils/DeclarationManager.cpp
