--- a/trunk/python/CMakeLists.txt
+++ b/trunk/python/CMakeLists.txt
@@ -1,10 +1,7 @@
 # Python RIBClient
 PROJECT (PythonRIBClient)
 
-SET (CMAKE_BUILD_TYPE "Release")
-# FIND_PACKAGE ( SWIG REQUIRED )
-# INCLUDE( FindSWIG )
-# INCLUDE( UseSWIG )
+# SET (CMAKE_BUILD_TYPE "Release")
 
 INCLUDE(FindPythonLibs)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
@@ -14,23 +11,18 @@ INCLUDE_DIRECTORIES ( ../utils )
 INCLUDE_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/include )
 INCLUDE_DIRECTORIES ( $ENV{OPENEXR_ROOT}/include )
 INCLUDE_DIRECTORIES ( $ENV{ILMBASE_ROOT}/include )
-INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
 INCLUDE_DIRECTORIES ( $ENV{PYTHON_INCLUDE} )
 
 LINK_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/lib )
 LINK_DIRECTORIES ( $ENV{OPENEXR_ROOT}/lib )
 LINK_DIRECTORIES ( $ENV{ILMBASE_ROOT}/lib )
-LINK_DIRECTORIES ( $ENV{DELIGHT}/lib )
-# LINK_DIRECTORIES ( ../utils )
-
-ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT )
 
 SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/python)
 SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CMAKE_SWIG_FLAGS "-includeall -o RIBClientPYTHON_wrap.cxx")
 
 SWIG_ADD_MODULE ( ribclient python RIBClient.i ParameterList.cpp )
-SWIG_LINK_LIBRARIES ( ribclient 3delight utils ${PYTHON_LIBRARIES} )
+SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} )
 
 IF (WIN32)
 SET_TARGET_PROPERTIES ( _ribclient PROPERTIES SUFFIX ".pyd")
