Defaults to Release build for Win32 Fix indentation of code

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,7 +1,9 @@
 # Python RIBClient
 PROJECT (PythonRIBClient)
 
-# SET (CMAKE_BUILD_TYPE "Release")
+IF (WIN32)
+  SET (CMAKE_BUILD_TYPE "Release")
+ENDIF (WIN32)
 
 INCLUDE(FindPythonLibs)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
@@ -25,5 +27,5 @@ SWIG_ADD_MODULE ( ribclient python RIBClient.i ParameterList.cpp )
 SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} )
 
 IF (WIN32)
-SET_TARGET_PROPERTIES ( _ribclient PROPERTIES SUFFIX ".pyd")
+  SET_TARGET_PROPERTIES ( _ribclient PROPERTIES SUFFIX ".pyd")
 ENDIF (WIN32)
