Fix -fPIC for Win32 platform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,12 +19,20 @@ LINK_DIRECTORIES ( $ENV{ILMBASE_ROOT}/lib )
 IF ( RENDERER MATCHES "PRMan" )
   INCLUDE_DIRECTORIES ( $ENV{RMANTREE}/include )
   LINK_DIRECTORIES ( $ENV{RMANTREE}/lib . )
-  ADD_DEFINITIONS ( -DPRMAN_RIBCLIENT -fPIC )
+  IF (WIN32)
+    ADD_DEFINITIONS ( -DPRMAN_RIBCLIENT )
+  ELSE (WIN32)
+    ADD_DEFINITIONS ( -DPRMAN_RIBCLIENT -fPIC )
+  ENDIF (WIN32)
   SET ( RIBCLIENT_LIBRARIES prman )
 ELSEIF ( RENDERER MATCHES "3Delight" )
   INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
   LINK_DIRECTORIES ( $ENV{DELIGHT}/lib . )
-  ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -fPIC )
+  IF (WIN32)
+    ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT)
+  ELSE (WIN32)
+    ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -fPIC )
+  ENDIF (WIN32)
   SET ( RIBCLIENT_LIBRARIES 3delight )
 ELSE ( RENDERER MATCHES "3Delight" )
 ENDIF ( RENDERER MATCHES "PRMan")
