Added installation instructions

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -29,3 +29,9 @@ SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES}
 IF (WIN32)
   SET_TARGET_PROPERTIES ( _ribclient PROPERTIES SUFFIX ".pyd")
 ENDIF (WIN32)
+
+INSTALL ( TARGETS _ribclient
+  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
+
+INSTALL ( FILES ${CMAKE_BINARY_DIR}/python/ribclient.py
+  DESTINATION ${CMAKE_INSTALL_PREFIX})
