--- a/trunk/python/CMakeLists.txt
+++ b/trunk/python/CMakeLists.txt
@@ -35,3 +35,5 @@ INSTALL ( TARGETS _ribclient
 
 INSTALL ( FILES ${CMAKE_BINARY_DIR}/python/ribclient.py
   DESTINATION ${CMAKE_INSTALL_PREFIX})
+
+INCLUDE (CPack)
