--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -36,4 +36,7 @@ INSTALL ( TARGETS _ribclient
 INSTALL ( FILES ${CMAKE_BINARY_DIR}/python/ribclient.py
   DESTINATION ${CMAKE_INSTALL_PREFIX})
 
+IF (WIN32)
+  SET ( CPACK_GENERATOR "ZIP" )
+ENDIF (WIN32)
 INCLUDE (CPack)
