--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -6,15 +6,6 @@ PROJECT ( ribclients )
 INCLUDE (FindSWIG)
 INCLUDE (UseSWIG)
 
-INCLUDE_DIRECTORIES ( ./utils )
-INCLUDE_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/include )
-INCLUDE_DIRECTORIES ( $ENV{OPENEXR_ROOT}/include )
-INCLUDE_DIRECTORIES ( $ENV{ILMBASE_ROOT}/include )
-
-LINK_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/lib )
-LINK_DIRECTORIES ( $ENV{OPENEXR_ROOT}/lib )
-LINK_DIRECTORIES ( $ENV{ILMBASE_ROOT}/lib )
-
 # Renderer specific options
 IF ( RENDERER MATCHES "PRMan" )
   INCLUDE_DIRECTORIES ( $ENV{RMANTREE}/include )
@@ -37,6 +28,10 @@ ELSEIF ( RENDERER MATCHES "3Delight" )
 ELSE ( RENDERER MATCHES "3Delight" )
 ENDIF ( RENDERER MATCHES "PRMan")
 
+INCLUDE_DIRECTORIES ( ./utils )
+# INCLUDE_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/include )
+
+# LINK_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/lib )
 
 ADD_LIBRARY ( utils STATIC
   utils/DeclarationManager.cpp
