--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -10,14 +10,10 @@ INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 
 INCLUDE_DIRECTORIES ( . )
 INCLUDE_DIRECTORIES ( ../utils )
-INCLUDE_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/include )
-INCLUDE_DIRECTORIES ( $ENV{OPENEXR_ROOT}/include )
-INCLUDE_DIRECTORIES ( $ENV{ILMBASE_ROOT}/include )
+# INCLUDE_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/include )
 INCLUDE_DIRECTORIES ( $ENV{PYTHON_INCLUDE} )
 
-LINK_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/lib )
-LINK_DIRECTORIES ( $ENV{OPENEXR_ROOT}/lib )
-LINK_DIRECTORIES ( $ENV{ILMBASE_ROOT}/lib )
+# LINK_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/lib )
 
 SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/python)
 SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CPLUSPLUS ON)
@@ -29,6 +25,11 @@ SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES}
 IF (WIN32)
   SET_TARGET_PROPERTIES ( _ribclient PROPERTIES SUFFIX ".pyd")
 ENDIF (WIN32)
+
+IF (APPLE)
+  SET_TARGET_PROPERTIES ( _ribclient PROPERTIES
+    LINK_FLAGS "-undefined dynamic_lookup")
+ENDIF (APPLE)
 
 INSTALL ( TARGETS _ribclient
   LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
