--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -18,7 +18,7 @@ IF ( RENDERER MATCHES "PRMan" )
   SET ( RIBCLIENT_LIBRARIES prman )
 ELSEIF ( RENDERER MATCHES "3Delight" )
   INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
-  LINK_DIRECTORIES ( $ENV{DELIGHT}/lib . )
+  LINK_DIRECTORIES ( $ENV{DELIGHT}/lib )
   IF (WIN32)
     ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT)
   ELSE (WIN32)
