--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -14,6 +14,7 @@ INCLUDE_DIRECTORIES ( $ENV{PYTHON_INCLUDE} )
 
 SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/python)
 # RIBClient
+SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES SWIG_FLAGS -py3)
 SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CMAKE_SWIG_FLAGS "-includeall -o RIBClientPYTHON_wrap.cxx")
 # RXClient
