--- a/trunk/python/CMakeLists.txt
+++ b/trunk/python/CMakeLists.txt
@@ -14,12 +14,16 @@ INCLUDE_DIRECTORIES ( $ENV{PYTHON_INCLUDE} )
 
 SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/python)
 # RIBClient
-SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES SWIG_FLAGS -py3)
 SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CMAKE_SWIG_FLAGS "-includeall -o RIBClientPYTHON_wrap.cxx")
 # RXClient
 SET_SOURCE_FILES_PROPERTIES( RXClient.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES( RXClient.i PROPERTIES CMAKE_SWIG_FLAGS "-includeall -o RXClientPYTHON_wrap.cxx")
+
+IF (PYTHON3)
+  SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES SWIG_FLAGS -py3)
+  SET_SOURCE_FILES_PROPERTIES( RXClient.i PROPERTIES SWIG_FLAGS -py3)
+ENDIF (PYTHON3)
 
 # RIBClient
 SWIG_ADD_MODULE ( ribclient python RIBClient.i ParameterList.cpp )
