--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -6,6 +6,10 @@ PROJECT ( ribclients )
 INCLUDE (FindSWIG)
 INCLUDE (UseSWIG)
 
+IF ( CMAKE_BUILD_TYPE MATCHES "Debug")
+    ADD_DEFINITIONS ( -DDEBUG )
+ENDIF ( CMAKE_BUILD_TYPE MATCHES "Debug")
+
 # Renderer specific options
 IF ( RENDERER MATCHES "PRMan" )
   INCLUDE_DIRECTORIES ( $ENV{RMANTREE}/include )
