--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -5,6 +5,7 @@ PROJECT ( ribclients )
 
 INCLUDE (FindSWIG)
 INCLUDE (UseSWIG)
+INCLUDE (FindLog4cxx)
 
 IF ( CMAKE_BUILD_TYPE MATCHES "Debug")
     ADD_DEFINITIONS ( -DDEBUG )
@@ -24,7 +25,7 @@ ELSEIF ( RENDERER MATCHES "3Delight" )
   INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
   LINK_DIRECTORIES ( $ENV{DELIGHT}/lib )
   IF (WIN32)
-    ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT)
+    ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -DLOG4CXX_STATIC)
   ELSE (WIN32)
     ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -fPIC )
   ENDIF (WIN32)
