Re-enable log4cxx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE (FindSWIG)
 INCLUDE (UseSWIG)
 INCLUDE (CTest)
 
-# INCLUDE (FindLog4cxx)
+INCLUDE (FindLog4cxx)
 
 IF ( CMAKE_BUILD_TYPE MATCHES "Debug")
     ADD_DEFINITIONS ( -DDEBUG )
