--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -27,10 +27,10 @@ ENDIF (PYTHON3)
 
 # RIBClient
 SWIG_ADD_MODULE ( ribclient python RIBClient.i ParameterList.cpp )
-SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} ${LOG4CXX_LIBRARIES} )
+SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} ${LOG4CXX_LIBRARIES} apr-1 aprutil-1 )
 # RXClient
 SWIG_ADD_MODULE ( rxclient python RXClient.i ParameterList.cpp )
-SWIG_LINK_LIBRARIES ( rxclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} ${LOG4CXX_LIBRARIES} )
+SWIG_LINK_LIBRARIES ( rxclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} ${LOG4CXX_LIBRARIES} apr-1 aprutil-1 )
 
 IF (WIN32)
   SET_TARGET_PROPERTIES ( _ribclient PROPERTIES SUFFIX ".pyd")
