--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -7,7 +7,10 @@ INCLUDE (FindSWIG)
 INCLUDE (UseSWIG)
 INCLUDE (CTest)
 
-INCLUDE (FindLog4cxx)
+# SET ( CMAKE_MODULE_PATH cmake )
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+
+# INCLUDE (FindLog4cxx)
 
 IF ( CMAKE_BUILD_TYPE MATCHES "Debug")
     ADD_DEFINITIONS ( -DDEBUG )
