--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -55,7 +55,7 @@ ADD_EXECUTABLE ( boostTest
 
 TARGET_LINK_LIBRARIES ( unitTest utils log4cxx apr-1 aprutil-1 cppunit ${RIBCLIENT_LIBRARIES} )
 
-TARGET_LINK_LIBRARIES ( boostTest utils ${RIBCLIENT_LIBRARIES} ${Boost_LIBRARIES} )
+TARGET_LINK_LIBRARIES ( boostTest utils log4cxx apr-1 aprutil-1 ${RIBCLIENT_LIBRARIES} ${Boost_LIBRARIES} )
 
 ADD_TEST ( UnitTest unitTest )
 
