More removal of log4cxx code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,6 @@ INCLUDE (CTest)
 # SET ( CMAKE_MODULE_PATH cmake )
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-# INCLUDE (FindLog4cxx)
-
 IF ( CMAKE_BUILD_TYPE MATCHES "Debug")
     ADD_DEFINITIONS ( -DDEBUG )
 ENDIF ( CMAKE_BUILD_TYPE MATCHES "Debug")
@@ -30,7 +28,7 @@ ELSEIF ( RENDERER MATCHES "3Delight" )
   INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
   LINK_DIRECTORIES ( $ENV{DELIGHT}/lib )
   IF (WIN32)
-    ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -DLOG4CXX_STATIC)
+    ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT )
   ELSE (WIN32)
     ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -fPIC )
   ENDIF (WIN32)
