Re-instate Makefile.posix so as to build Python3 libraries as it is not possible to build them via CMake at the moment

--- a/trunk/utils/Makefile.posix
+++ b/trunk/utils/Makefile.posix
@@ -2,7 +2,7 @@
 
 OSNAME		= $(shell uname)
 
-include ../../RIBClientMakefileRules.inc
+include ../RIBClientMakefileRules.inc
 
 ifeq ($(VERIFY),1)
   RMAN_DEF += -DVERIFY_RIBCLIENT
