--- a/trunk/python/CMakeLists.txt
+++ b/trunk/python/CMakeLists.txt
@@ -5,6 +5,7 @@ IF (WIN32)
   SET (CMAKE_BUILD_TYPE "Release")
 ENDIF (WIN32)
 
+INCLUDE(FindPythonInterp)
 INCLUDE(FindPythonLibs)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 
@@ -19,11 +20,6 @@ SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CMAKE_SWIG_FLAGS "-includeal
 # RXClient
 SET_SOURCE_FILES_PROPERTIES( RXClient.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES( RXClient.i PROPERTIES CMAKE_SWIG_FLAGS "-includeall -o RXClientPYTHON_wrap.cxx")
-
-IF (PYTHON3)
-  SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES SWIG_FLAGS -py3)
-  SET_SOURCE_FILES_PROPERTIES( RXClient.i PROPERTIES SWIG_FLAGS -py3)
-ENDIF (PYTHON3)
 
 # RIBClient
 SWIG_ADD_MODULE ( ribclient python RIBClient.i ParameterList.cpp )
