Added search for google log headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ IF ( CMAKE_BUILD_TYPE MATCHES "Debug")
     ADD_DEFINITIONS ( -DDEBUG )
 ENDIF ( CMAKE_BUILD_TYPE MATCHES "Debug")
 
+INCLUDE_DIRECTORIES ( $ENV{GLOG_ROOT}/include )
+
 # Renderer specific options
 IF ( RENDERER MATCHES "PRMan" )
   INCLUDE_DIRECTORIES ( $ENV{RMANTREE}/include )
@@ -40,7 +42,7 @@ INCLUDE_DIRECTORIES ( ./utils )
 
 ADD_SUBDIRECTORY ( utils )
 
-ADD_SUBDIRECTORY ( java )
+# ADD_SUBDIRECTORY ( java )
 
 ADD_SUBDIRECTORY ( python )
 
