--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -15,6 +15,7 @@ IF ( CMAKE_BUILD_TYPE MATCHES "Debug")
 ENDIF ( CMAKE_BUILD_TYPE MATCHES "Debug")
 
 INCLUDE_DIRECTORIES ( $ENV{GLOG_ROOT}/include )
+LINK_DIRECTORIES ( $ENV{GLOG_ROOT}/lib )
 
 # Renderer specific options
 IF ( RENDERER MATCHES "PRMan" )
