--- a/trunk/python/CMakeLists.txt
+++ b/trunk/python/CMakeLists.txt
@@ -23,10 +23,10 @@ SET_SOURCE_FILES_PROPERTIES( RXClient.i PROPERTIES CMAKE_SWIG_FLAGS "-includeall
 
 # RIBClient
 SWIG_ADD_MODULE ( ribclient python RIBClient.i ParameterList.cpp )
-SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} )
+SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} glog )
 # RXClient
 SWIG_ADD_MODULE ( rxclient python RXClient.i ParameterList.cpp )
-SWIG_LINK_LIBRARIES ( rxclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} )
+SWIG_LINK_LIBRARIES ( rxclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} glog )
 
 IF (WIN32)
   SET_TARGET_PROPERTIES ( _ribclient PROPERTIES SUFFIX ".pyd")
