--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -7,6 +7,9 @@ INCLUDE (FindSWIG)
 INCLUDE (UseSWIG)
 INCLUDE (CTest)
 
+INCLUDE_DIRECTORIES ( $ENV{GLOG_ROOT}/include )
+LINK_DIRECTORIES ( $ENV{GLOG_ROOT}/lib )
+
 # SET ( CMAKE_MODULE_PATH cmake )
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
