--- a/trunk/python/CMakeLists.txt
+++ b/trunk/python/CMakeLists.txt
@@ -5,13 +5,13 @@ IF (WIN32)
   SET (CMAKE_BUILD_TYPE "Release")
 ENDIF (WIN32)
 
-INCLUDE(FindPythonInterp)
+SET ( Python_ADDITIONAL_VERSIONS "3.2" )
+
 INCLUDE(FindPythonLibs)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 
 INCLUDE_DIRECTORIES ( . )
 INCLUDE_DIRECTORIES ( ../utils )
-INCLUDE_DIRECTORIES ( $ENV{PYTHON_INCLUDE} )
 
 SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/python)
 # RIBClient
@@ -20,6 +20,8 @@ SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CMAKE_SWIG_FLAGS "-includeal
 # RXClient
 SET_SOURCE_FILES_PROPERTIES( RXClient.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES( RXClient.i PROPERTIES CMAKE_SWIG_FLAGS "-includeall -o RXClientPYTHON_wrap.cxx")
+
+MESSAGE ( INFO ${PYTHON_LIBRARIES} )
 
 # RIBClient
 SWIG_ADD_MODULE ( ribclient python RIBClient.i ParameterList.cpp )
