Partial port to OS X Yosemite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,44 +1,38 @@
 # Top level CMake configuration file
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 PROJECT ( ribclients )
 
-INCLUDE (FindSWIG)
-INCLUDE (UseSWIG)
-INCLUDE (CTest)
+FIND_PACKAGE ( SWIG REQUIRED )
+INCLUDE ( UseSWIG )
+INCLUDE ( CTest )
+FIND_PACKAGE ( GoogleLog REQUIRED )
 
-INCLUDE_DIRECTORIES ( $ENV{GLOG_ROOT}/include )
-LINK_DIRECTORIES ( $ENV{GLOG_ROOT}/lib )
-
-# SET ( CMAKE_MODULE_PATH cmake )
-LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+INCLUDE_DIRECTORIES ( ${GLOG_INCLUDE_DIR} )
 
 IF ( CMAKE_BUILD_TYPE MATCHES "Debug")
     ADD_DEFINITIONS ( -DDEBUG )
 ENDIF ( CMAKE_BUILD_TYPE MATCHES "Debug")
 
-INCLUDE_DIRECTORIES ( $ENV{GLOG_ROOT}/include )
-LINK_DIRECTORIES ( $ENV{GLOG_ROOT}/lib )
-
 # Renderer specific options
 IF ( RENDERER MATCHES "PRMan" )
-  INCLUDE_DIRECTORIES ( $ENV{RMANTREE}/include )
-  LINK_DIRECTORIES ( $ENV{RMANTREE}/lib . )
+  FIND_PACKAGE ( PRMan REQUIRED )
+  INCLUDE_DIRECTORIES ( ${PRMAN_INCLUDE_DIR} )
   IF (WIN32)
     ADD_DEFINITIONS ( -DPRMAN_RIBCLIENT )
   ELSE (WIN32)
     ADD_DEFINITIONS ( -DPRMAN_RIBCLIENT -fPIC )
   ENDIF (WIN32)
-  SET ( RIBCLIENT_LIBRARIES prman )
+  SET ( RIBCLIENT_LIBRARIES ${PRMAN_prman_LIBRARY} )
 ELSEIF ( RENDERER MATCHES "3Delight" )
-  INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
-  LINK_DIRECTORIES ( $ENV{DELIGHT}/lib )
+  FIND_PACKAGE ( Delight REQUIRED )
+  INCLUDE_DIRECTORIES ( ${DELIGHT_INCLUDE_DIR} )
   IF (WIN32)
     ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT )
   ELSE (WIN32)
     ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -fPIC )
   ENDIF (WIN32)
-  SET ( RIBCLIENT_LIBRARIES 3delight )
+  SET ( RIBCLIENT_LIBRARIES ${DELIGHT_3delight_LIBRARY} )
 ELSE ( RENDERER MATCHES "3Delight" )
 ENDIF ( RENDERER MATCHES "PRMan")
 
@@ -46,8 +40,8 @@ INCLUDE_DIRECTORIES ( ./utils )
 
 ADD_SUBDIRECTORY ( utils )
 
-# ADD_SUBDIRECTORY ( java )
+ADD_SUBDIRECTORY ( java )
 
 ADD_SUBDIRECTORY ( python )
 
-# ADD_SUBDIRECTORY ( ruby )
+ADD_SUBDIRECTORY ( ruby )
