--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -25,10 +25,10 @@ MESSAGE ( INFO ${PYTHON_LIBRARIES} )
 
 # RIBClient
 SWIG_ADD_MODULE ( ribclient python RIBClient.i ParameterList.cpp )
-SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} glog )
+SWIG_LINK_LIBRARIES ( ribclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} ${GLOG_glog_LIBRARY} )
 # RXClient
 SWIG_ADD_MODULE ( rxclient python RXClient.i ParameterList.cpp )
-SWIG_LINK_LIBRARIES ( rxclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} glog )
+SWIG_LINK_LIBRARIES ( rxclient ${RIBCLIENT_LIBRARIES} utils ${PYTHON_LIBRARIES} ${GLOG_glog_LIBRARY} )
 
 IF (WIN32)
   SET_TARGET_PROPERTIES ( _ribclient PROPERTIES SUFFIX ".pyd")
