--- a/ruby/CMakeLists.txt
+++ b/ruby/CMakeLists.txt
@@ -1,27 +1,25 @@
 # Ruby RIBClient
-PROJECT (RubyRIBClient)
-
-# INCLUDE ( FindRubyEx )
+FIND_PACKAGE ( Ruby REQUIRED )
 
 INCLUDE_DIRECTORIES (
   .
   ../utils
-  $ENV{CPPUNIT_ROOT}/include
-  $ENV{OPENEXR_ROOT}/include
-  $ENV{ILMBASE_ROOT}/include
-  $ENV{DELIGHT}/include
+#  $ENV{CPPUNIT_ROOT}/include
+#  $ENV{OPENEXR_ROOT}/include
+#  $ENV{ILMBASE_ROOT}/include
+#  $ENV{DELIGHT}/include
   )
-INCLUDE_DIRECTORIES ( $ENV{RUBY_INCLUDE} )
+INCLUDE_DIRECTORIES ( ${RUBY_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES ( ${RUBY_HDR_DIR} )
 INCLUDE_DIRECTORIES ( ${RUBY_CONFIG_HDR_DIR} )
 
 LINK_DIRECTORIES (
 #  ../utils
-  $ENV{CPPUNIT_ROOT}/lib
-  $ENV{OPENEXR_ROOT}/lib
-  $ENV{ILMBASE_ROOT}/lib
-  $ENV{DELIGHT}/lib
-  $ENV{RUBY_LIB}
+#  $ENV{CPPUNIT_ROOT}/lib
+#  $ENV{OPENEXR_ROOT}/lib
+#  $ENV{ILMBASE_ROOT}/lib
+#  $ENV{DELIGHT}/lib
+#  $ENV{RUBY_LIB}
   )
 
 ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT )
