--- a/java/CMakeLists.txt
+++ b/java/CMakeLists.txt
@@ -10,19 +10,16 @@ INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2})
 # INCLUDE_DIRECTORIES($ENV{JAVA_INCLUDE} )
 
 INCLUDE_DIRECTORIES ( . )
-INCLUDE_DIRECTORIES ( ./../utils )
-INCLUDE_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/include )
+INCLUDE_DIRECTORIES ( ../utils )
+# INCLUDE_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/include )
 INCLUDE_DIRECTORIES ( $ENV{OPENEXR_ROOT}/include )
 INCLUDE_DIRECTORIES ( $ENV{ILMBASE_ROOT}/include )
-INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
+# INCLUDE_DIRECTORIES ( $ENV{DELIGHT}/include )
 
-LINK_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/lib )
+# LINK_DIRECTORIES ( $ENV{CPPUNIT_ROOT}/lib )
 LINK_DIRECTORIES ( $ENV{OPENEXR_ROOT}/lib )
 LINK_DIRECTORIES ( $ENV{ILMBASE_ROOT}/lib )
-LINK_DIRECTORIES ( $ENV{DELIGHT}/lib )
-# LINK_DIRECTORIES ( ./../utils )
-
-ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT )
+# LINK_DIRECTORIES ( $ENV{DELIGHT}/lib )
 
 SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES( RIBClient.i PROPERTIES SWIG_FLAGS "-includeall")
@@ -32,7 +29,7 @@ IF (APPLE)
 ENDIF (APPLE)
 
 SWIG_ADD_MODULE ( ribclient java RIBClient.i ParameterList.cpp )
-SWIG_LINK_LIBRARIES ( ribclient utils 3delight )
+SWIG_LINK_LIBRARIES ( ribclient utils ${RIBCLIENT_LIBRARIES} ${GLOG_glog_LIBRARY})
 
 SET_TARGET_PROPERTIES ( ribclient PROPERTIES
   PREFIX "lib"
